[package]
name = "closure-future"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-oneshot = "0.5.0"
rayon = {version = "1.5.1", optional = true}

[dev-dependencies]
pollster = "0.2.4"
rayon = "1.5.1"

[features]
nightly-docs = []

[package.metadata.docs.rs]
features = ["rayon", "nightly-docs"]