[package]
name = "closure-future"
version = "0.1.0"
edition = "2018"
authors = ["Arthur Carcano <53921575+krtab@users.noreply.github.com>"]
license = "BSD-3-Clause"
description="Easily run closures on thread pools and turn their result into Futures"
repository="https://github.com/krtab/closure-future"
readme="README.md"
keywords=["async","future","threadpool","rayon"]
categories=["asynchronous","concurrency"]

exclude = [
    ".vscode",
    "Cargo.lock"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-oneshot = "0.5.0"
rayon = {version = "1.5.1", optional = true}

[dev-dependencies]
pollster = "0.2.4"
rayon = "1.5.1"

[features]
nightly-docs = []

[package.metadata.docs.rs]
features = ["rayon", "nightly-docs"]